Fixed spelling error + "no search results" is not centred again

--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -519,8 +519,8 @@ a.inline-card {
     }
 }
 
-ol.impotant-list-box,
-ul.impotant-list-box {
+ol.important-list-box,
+ul.important-list-box {
     margin: 1em 10%;
 
     border: var(--default-border);
@@ -529,16 +529,16 @@ ul.impotant-list-box {
 
     list-style-type: none;
 }
-ol.impotant-list-box > li,
-ul.impotant-list-box > li {
+ol.important-list-box > li,
+ul.important-list-box > li {
     margin: 1em 0;
 }
-ol.impotant-list-box > li:first-child,
-ul.impotant-list-box > li:first-child {
+ol.important-list-box > li:first-child,
+ul.important-list-box > li:first-child {
     margin-top: 0;
 }
-ol.impotant-list-box > li:last-child,
-ul.impotant-list-box > li:last-child {
+ol.important-list-box > li:last-child,
+ul.important-list-box > li:last-child {
     margin-bottom: 0;
 }
 
@@ -553,8 +553,8 @@ ul.impotant-list-box > li:last-child {
         width: 80%;
     }
 
-    ol.impotant-list-box,
-    ul.impotant-list-box {
+    ol.important-list-box,
+    ul.important-list-box {
         margin: 1em 0;
     }
 }
@@ -568,8 +568,8 @@ ul.impotant-list-box > li:last-child {
         max-width: 100%;
     }
 
-    ol.impotant-list-box,
-    ul.impotant-list-box {
+    ol.important-list-box,
+    ul.important-list-box {
         margin: 1em 0;
     }
 }
@@ -603,8 +603,8 @@ ul.impotant-list-box > li:last-child {
         content: none;
     }
 
-    ol.impotant-list-box,
-    ul.impotant-list-box {
+    ol.important-list-box,
+    ul.important-list-box {
         margin: 1em 0;
 
         border: none;
